[~] Fixed Teaser Spacings

--- a/app/client/src/scss/elements/TeaserElement.scss
+++ b/app/client/src/scss/elements/TeaserElement.scss
@@ -5,6 +5,7 @@ section.section--TeaserElement {
         text-align: center;
 
         .teaserelement_list {
+            gap: 30px;
 
             .teaseritem {
                 background-color: var(--ColorGray);
